Fix paragaph syling

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -151,11 +151,6 @@ h1 {
   font-weight: 700;
 }
 
-p {
-  /* margin-top: calc(var(--spacing) * 4); */
-  margin-bottom: calc(var(--spacing) * 4);
-}
-
 hr {
   margin-top: calc(var(--spacing) * 4);
   margin-bottom: calc(var(--spacing) * 4);
